--- a/templates/index.html
+++ b/templates/index.html
@@ -3,112 +3,38 @@
 {% extends "nav-template.html" %}
 {% block content %}
   <!-- Page Content -->
-  <div class="container">
-
+  <div class="" id="dashboard">
     <div class="row">
-
-      <!-- Blog Entries Column -->
-      <div class="col-md-8" style="padding:30px;">
-      <br><br>
-
-
-        <!-- Blog Post -->
-        <div class="card mb-4">
-          <a href="{{ url_for('mlb_headshots')}}">
-            <img class="card-img-top" src="{{ url_for('static',filename='images/mook2.jpg') }}" alt="Card image cap">
-          </a>
-          <div class="card-body">
-            <h2 class="card-title">Scraping MLB Headshots with BeautifulSoup</h2>
-            <p class="card-text">Beautiful Soup is a Python module that is a tremendous resource when trying to get information or data from a web source. I feel that the best way to get your head around Beautiful Soup is to look at examples and practice implementing the module. In this post, I will walk through a class that is able to get MLB baseball teams, rosters and headshots from baseball-reference.com. I will use these headshots in my next post to slice the images up and train a neural   network to put them back together.</p>
-            <a href="{{ url_for('mlb_headshots')}}" class="btn btn-primary">Read More &rarr;</a>
-          </div>
-        </div>
-
-        <div class="card mb-4">
-          <a href="{{ url_for('boarding_sim')}}">
-            <img class="card-img-top" src="{{ url_for('static',filename='images/boarding-sim.png') }}" alt="Card image cap">
-          </a>
-          <div class="card-body">
-            <h2 class="card-title">Data Science without Data?</h2>
-            <p class="card-text">Data can be misleading, bias, unreliable. Data is costly
-            to collect and costly to make decisions based on unreliable data. It
-            is important to acknlowledge the limitations of data and idetify cases
-            where simulation can replace data collection</p>
-            <a href="{{ url_for('boarding_sim')}}" class="btn btn-primary">Read More &rarr;</a>
-          </div>
-        </div>
-
-
-        <!-- Blog Post -->
-        <div class="card mb-4">
-          <a href="{{ url_for('xgboost_allstate')}}">
-            <img class="card-img-top" src="{{ url_for('static',filename='images/allstate-logo.png') }}" alt="Card image cap">
-          </a>
-          <div class="card-body">
-            <h2 class="card-title">
-              An XGBoost Walkthrough with the Kaggle Allstate Data
-            </h2>
-            <p class="card-text">
-              Extreme gradient boosting, or XGBoost is one of the most powerful
-              algorithms out today. It is extremely popular in data science and
-              tends to perform phenomenally in many different Kaggle competitions.
-              The Allstate claims competition is a good example of where a
-              simple xgboost model can perform very well and get you a
-              fairly high ranking on the leader-boards, if tuned properly.
-              Today we are going to do a simple walk-through of the Allstate
-              problem and learn how to code an xgboost model in Python,
-              along the way we’ll do some simple data exploration before
-              tuning our model to perform well on test data.
-            </p>
-            <a href="{{ url_for('xgboost_allstate')}}" class="btn btn-primary">Read More &rarr;</a>
-          </div>
-        </div>
-
-        <!-- Pagination -->
-        <ul class="pagination justify-content-center mb-4">
-          <li class="page-item">
-            <a class="page-link" href="#">&larr; Older</a>
-          </li>
-          <li class="page-item disabled">
-            <a class="page-link" href="#">Newer &rarr;</a>
-          </li>
-        </ul>
-
+      <div class="dashboard-item" id="recipes">
+        <button class="btn-dash" type="button" name="button">
+          <i class='fas fa-lemon' style='font-size:48px;color:#05386B'></i><br>
+          Recipes
+        </button>
       </div>
-
-      <!-- Sidebar Widgets Column -->
-      <div class="col-md-4" style="padding:30px;">
-
-
-
-        <!-- Categories Widget -->
-        <div class="card my-4">
-          <h5 class="card-header">Categories</h5>
-          <div class="card-body">
-            <div class="row">
-              <div class="col-lg-6">
-                <ul class="list-unstyled mb-0">
-                  <li>
-                    <a href="#">Data Science</a>
-                  </li>
-                  <li>
-                    <a href="#">Web Scraping</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul class="list-unstyled mb-0">
-                  <li>
-                    <a href="#">Pygames</a>
-                  </li>
-                  <li>
-                    <a href="#">Random</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
+      <div class="dashboard-item" id="finances">
+        <button class="btn-dash" type="button" name="button">
+          <i class='fas fa-piggy-bank' style='font-size:48px;color:#05386B'></i><br>
+          Finances
+        </button>
+      </div>
+      <div class="dashboard-item" id="to-do">
+        <button class="btn-dash" type="button" name="button">
+          <i class='fas fa-book' style='font-size:48px;color:#05386B'></i>
+          <br>To Do
+        </button>
+      </div>
+    </div>
+    <div class="row">
+      <div class="dashboard-item" id="bucket-list">
+        <button class="btn-dash" type="button" name="button">
+          <i class='fas fa-globe-africa' style='font-size:48px;color:#05386B'></i>
+          <br>Bucket List</button>
+      </div>
+      <div class="dashboard-item" id="recipes">
+        <button class="btn-dash" type="button" name="button">Recipes</button>
+      </div>
+      <div class="dashboard-item" id="recipes">
+        <button class="btn-dash" type="button" name="button">Recipes</button>
       </div>
     </div>
   </div>
