--- a/templates/nav-template.html
+++ b/templates/nav-template.html
@@ -14,10 +14,11 @@
   <!-- Bootstrap core CSS -->
   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/bootstrap.min.css') }}">
   <!-- Custom styles for this template -->
+  <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/home.css') }}">
   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/blog-home.css') }}">
   <link rel="icon" href="{{ url_for('static', filename='images/qc-analytics.png')}}">
-
-
+  <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+  <!--https://www.w3schools.com/icons/fontawesome5_icons_finance.asp-->
 
 </head>
 
@@ -31,7 +32,7 @@
       <a href="{{ url_for('main')}}">
         <img class='logo-img' src="{{ url_for('static', filename='images/qc-analytics.png')}}" alt="">
       </a>
-      <a class="navbar-brand" href="{{ url_for('main')}}">Queen City Analytics</a>
+      <a class="navbar-brand" href="{{ url_for('main')}}">The Hulsemans</a>
       <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
