--- a/templates/nav-template.html
+++ b/templates/nav-template.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Queen City Analytics</title>
+  <title>The Hulsemans</title>
 
 
   <!-- Bootstrap core CSS -->
@@ -16,7 +16,8 @@
   <!-- Custom styles for this template -->
   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/home.css') }}">
   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/blog-home.css') }}">
-  <link rel="icon" href="{{ url_for('static', filename='images/qc-analytics.png')}}">
+  <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/recipe-search.css') }}">
+  <link rel="icon" href="{{ url_for('static', filename='images/h.png')}}">
   <script src='https://kit.fontawesome.com/a076d05399.js'></script>
   <!--https://www.w3schools.com/icons/fontawesome5_icons_finance.asp-->
 
@@ -30,7 +31,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
       <a href="{{ url_for('main')}}">
-        <img class='logo-img' src="{{ url_for('static', filename='images/qc-analytics.png')}}" alt="">
+        <img class='logo-img' src="{{ url_for('static', filename='images/h.png')}}" alt="">
       </a>
       <a class="navbar-brand" href="{{ url_for('main')}}">The Hulsemans</a>
       <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
