--- a/templates/recipe-search.html
+++ b/templates/recipe-search.html
@@ -4,7 +4,7 @@
 
 <!DOCTYPE html>
 <div id="recipe-search">
-  <h2>My Customers</h2>
+  <h2>Cookbook</h2>
   <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
   {{ table |  safe }}
 </div>
@@ -28,6 +28,51 @@ function myFunction() {
     }
   }
 }
+var test = '{{ dets }}'
+console.log(test)
+
+function onRowClick(tableId, callback) {
+    var table = document.getElementById(tableId),
+        rows = table.getElementsByTagName("tr"),
+        i;
+    for (i = 0; i < rows.length; i++) {
+        table.rows[i].onclick = function (row) {
+            return function () {
+                callback(row);
+            };
+        }(table.rows[i]);
+    }
+};
+
+onRowClick("recipe-table", function (row){
+    var rowid = "details-row";
+    // delete table rows
+    var details_row = document.getElementById(rowid);
+    var current_row = "";
+    if (details_row != null){
+      current_row = details_row.previousElementSibling.getElementsByTagName("td")[0].textContent;
+      details_row.parentNode.removeChild(details_row);
+    };
+
+    var value = row.getElementsByTagName("td")[0].innerHTML;
+    var row_num = row.closest('tr').rowIndex;
+    //document.getElementById('click-response').innerHTML = value + " clicked!";
+    console.log("value>>", value);
+    console.log("Row num>>", row_num);
+
+    if (current_row != value) {
+      console.log("Current row", current_row);
+      console.log("value row", value);
+      var table = document.getElementById("recipe-table");
+      var row = table.insertRow(row_num+1);
+      row.id = rowid;
+      var cell1 = row.insertCell(0);
+      cell1.colSpan = "100";
+      cell1.innerHTML = "Showing details for " + value;
+    };
+});
+
+
 </script>
 
 
