Recipe table fully functional

--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -26,6 +26,13 @@
 }
 #recipes {
 }
+.keyword-column {
+  display: none;
+}
+.food-img {
+  height: 200px;
+  width: auto;
+}
 
 .btn-dash {
   width: 200px;
