--- a/templates/nav-template.html
+++ b/templates/nav-template.html
@@ -17,9 +17,12 @@
   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/home.css') }}">
   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/blog-home.css') }}">
   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/recipe-search.css') }}">
+  <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/add-recipe.css') }}">
   <link rel="icon" href="{{ url_for('static', filename='images/h.png')}}">
   <script src='https://kit.fontawesome.com/a076d05399.js'></script>
   <!--https://www.w3schools.com/icons/fontawesome5_icons_finance.asp-->
+  <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">-->
+
 
 </head>
 
@@ -74,6 +77,8 @@
   <script src="{{url_for('static', filename='js/jquery-3.3.1.slim.min.js')}}"></script>
   <script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
   <script src="{{url_for('static', filename='js/popper.min.js')}}"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <!-- Bootstrap core JavaScript
   <script src="{{url_for('static', filename='js/jquery.min.js')}}"></script>
   <script src="{{url_for('static', filename='js/bundle.min.js')}}"></script>
