--- a/static/styles/recipe-search.css
+++ b/static/styles/recipe-search.css
@@ -5,17 +5,19 @@
   display: inline-block;
 }
 #add-recipe-btn {
+  position: relative;
   width: 100%;
   height: 60px;
   text-align: left;
+
 }
 i {
   padding-bottom: 0px;
 }
 
 #add-recipe-btn-a{
-  display: table-cell;
-  vertical-align: middle;
+  position: absolute;
+  top: 35%;
   padding-left: 20px;
 }
 
