--- a/templates/add-recipe.html
+++ b/templates/add-recipe.html
@@ -7,88 +7,164 @@
   <div class="form">
     <h4 class="form-header">Recipe Name</h3>
       <div class="input-group mb-3">
-    <div class="input-group-prepend">
-      <span class="input-group-text" id="inputGroup-sizing-default">Recipe Name</span>
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="inputGroup-sizing-default">Recipe Name</span>
+        </div>
+        <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
+      </div>
     </div>
-    <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
-  </div>
-  </div>
-  <div class="form">
-    <h4 class="form-header">Meal</h3>
-    <div class="form-check form-check-inline">
-      <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="Breakfast">
-      <label class="form-check-label" for="inlineCheckbox1">Breakfast</label>
+    <div class="form">
+      <h4 class="form-header">Meal</h3>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="Breakfast">
+          <label class="form-check-label" for="inlineCheckbox1">Breakfast</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="Lunch">
+          <label class="form-check-label" for="inlineCheckbox2">Lunch</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="Dinner">
+          <label class="form-check-label" for="inlineCheckbox3">Dinner</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="Side">
+          <label class="form-check-label" for="inlineCheckbox3">Side</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="Drink">
+          <label class="form-check-label" for="inlineCheckbox3">Drink</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="Dessert">
+          <label class="form-check-label" for="inlineCheckbox3">Dessert</label>
+        </div>
+      </div>
     </div>
-    <div class="form-check form-check-inline">
-      <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="Lunch">
-      <label class="form-check-label" for="inlineCheckbox2">Lunch</label>
-    </div>
-    <div class="form-check form-check-inline">
-      <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="Dinner">
-      <label class="form-check-label" for="inlineCheckbox3">Dinner</label>
-    </div>
-    <div class="form-check form-check-inline">
-      <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="Side">
-      <label class="form-check-label" for="inlineCheckbox3">Side</label>
-    </div>
-    <div class="form-check form-check-inline">
-      <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="Drink">
-      <label class="form-check-label" for="inlineCheckbox3">Drink</label>
-    </div>
-    <div class="form-check form-check-inline">
-      <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="Dessert">
-      <label class="form-check-label" for="inlineCheckbox3">Dessert</label>
-    </div>
-</div>
-
-<div class="form-row">
-  <div class="form">
-    <h4 class="form-header">Meal</h3>
-    <div class="form-check form-check-inline">
-      <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="Breakfast">
-      <label class="form-check-label" for="inlineCheckbox1">Breakfast</label>
-    </div>
-    <div class="form-check form-check-inline">
-      <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="Lunch">
-      <label class="form-check-label" for="inlineCheckbox2">Lunch</label>
-    </div>
-    <div class="form-check form-check-inline">
-      <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="Dinner">
-      <label class="form-check-label" for="inlineCheckbox3">Dinner</label>
-    </div>
-    <div class="form-check form-check-inline">
-      <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="Side">
-      <label class="form-check-label" for="inlineCheckbox3">Side</label>
-    </div>
-    <div class="form-check form-check-inline">
-      <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="Drink">
-      <label class="form-check-label" for="inlineCheckbox3">Drink</label>
-    </div>
-    <div class="form-check form-check-inline">
-      <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="Dessert">
-      <label class="form-check-label" for="inlineCheckbox3">Dessert</label>
-    </div>
-  </div>
-  <div class="form">
-    <h4 class="form-header">Season</h3>
-    <div class="form-check form-check-inline">
-      <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="Spring">
-      <label class="form-check-label" for="inlineCheckbox1">Spring</label>
-    </div>
-    <div class="form-check form-check-inline">
-      <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="Summer">
-      <label class="form-check-label" for="inlineCheckbox2">Summer</label>
-    </div>
-    <div class="form-check form-check-inline">
-      <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="Fall">
-      <label class="form-check-label" for="inlineCheckbox3">Fall</label>
-    </div>
-    <div class="form-check form-check-inline">
-      <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="Winter">
-      <label class="form-check-label" for="inlineCheckbox3">Winter</label>
-    </div>
-  </div>
-</div>
 
 
-{% endblock %}
+    <div class="form-row">
+      <div class="form">
+        <h4 class="form-header">Season</h3>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="Spring">
+            <label class="form-check-label" for="inlineCheckbox1">Spring</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="Summer">
+            <label class="form-check-label" for="inlineCheckbox2">Summer</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="Fall">
+            <label class="form-check-label" for="inlineCheckbox3">Fall</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="Winter">
+            <label class="form-check-label" for="inlineCheckbox3">Winter</label>
+          </div>
+        </div>
+        <div class="form">
+          <h4 class="form-header">Crockpot Meal</h3>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="Yes">
+              <label class="form-check-label" for="inlineCheckbox1">Yes</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="Yes">
+              <label class="form-check-label" for="inlineCheckbox2">Yes</label>
+            </div>
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="form">
+            <h4 class="form-header">Source of Recipe</h3>
+              <div class="form-check-inline">
+                <label class="form-check-label">
+                  <input id="url-src-recipe" onchange="getRecipeSRC()" type="radio" class="form-check-input" name="optradio" checked>URL Web Address
+                </label>
+              </div>
+              <div class="form-check-inline">
+                <label class="form-check-label">
+                  <input id="upload-src-recipe" onchange="getRecipeSRC()" type="radio" class="form-check-input" name="optradio">Upload PDF
+                </label>
+              </div>
+              <div id="url-recipe-input" class="input-group mb-3" >
+                <div class="input-group-prepend">
+                  <span class="input-group-text" id="inputGroup-sizing-default">Recipe URL</span>
+                </div>
+                <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
+              </div>
+              <div id="upload-recipe-input" class="input-group-prepend">
+                <div class="custom-file mb-3">
+                  <input type="file" class="custom-file-input" id="customFile" name="filename">
+                  <label class="custom-file-label" for="customFile">Choose file</label>
+                </div>
+              </div>
+            </div>
+            <div class="form">
+              <h4 class="form-header">Upload Image</h3>
+                <div class="form-check-inline">
+                  <label class="form-check-label">
+                    <input id="url-src-img" onchange="getImgSRC()" type="radio" class="form-check-input" name="optradio-img" checked>URL Web Address
+                  </label>
+                </div>
+                <div class="form-check-inline">
+                  <label class="form-check-label">
+                    <input id="upload-src-recipe" onchange="getImgSRC()" type="radio" class="form-check-input" name="optradio-img">Upload PDF
+                  </label>
+                </div>
+                <div id="url-img-input" class="input-group mb-3" >
+                  <div class="input-group-prepend">
+                    <span class="input-group-text" id="inputGroup-sizing-default">Recipe URL</span>
+                  </div>
+                  <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
+                </div>
+                <div id="upload-img-input" class="input-group-prepend">
+                  <div class="custom-file mb-3">
+                    <input type="file" class="custom-file-input" id="customFile" name="filename">
+                    <label class="custom-file-label" for="customFile">Choose file</label>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="form-row">
+            <div id="ingredient-tag"  class="form container">
+              <h4 class="form-header">Add Ingredients</h3>
+                <input id="form-tags-1" name="tags-1" type="text" value="jQuery,Script,Net">
+              </div>
+            </div>
+            <br><br><br><br><br>
+
+            <script type="text/javascript">
+              function getRecipeSRC() {
+                if (document.getElementById("url-src-recipe").checked == true) {
+                  document.getElementById("url-recipe-input").style.display ='flex';
+                  document.getElementById("upload-recipe-input").style.display ='none';
+                }
+                else {
+                  document.getElementById("url-recipe-input").style.display ='none';
+                  document.getElementById("upload-recipe-input").style.display ='flex';
+                }
+              }
+              getRecipeSRC();
+              function getImgSRC() {
+                if (document.getElementById("url-src-img").checked == true) {
+                  document.getElementById("url-img-input").style.display ='flex';
+                  document.getElementById("upload-img-input").style.display ='none';
+                }
+                else {
+                  document.getElementById("url-img-input").style.display ='none';
+                  document.getElementById("upload-img-input").style.display ='flex';
+                }
+              }
+              getImgSRC();
+            </script>
+            <script>
+              $(".custom-file-input").on("change", function() {
+                var fileName = $(this).val().split("\\").pop();
+                $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
+              });
+            </script>
+
+
+            {% endblock %}
