--- a/templates/nav-template.html
+++ b/templates/nav-template.html
@@ -80,6 +80,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="{{url_for('static', filename='js/bootstrap-tagsinput.js')}}"></script>
+  <script src="{{url_for('static', filename='js/add_recipe.js')}}"></script>
+
   <!-- Bootstrap core JavaScript
   <script src="{{url_for('static', filename='js/jquery.min.js')}}"></script>
   <script src="{{url_for('static', filename='js/bundle.min.js')}}"></script>
