--- a/static/styles/add-recipe.css
+++ b/static/styles/add-recipe.css
@@ -55,8 +55,18 @@
   width:80%;
   height: 200px;
 }
+#instructions {
+  width:80%;
+  height: 300px;
+}
 #form-tags-1{
   height: 200px;
+}
+#ingredients-table {
+  width: 100%;
+  border: 1px solid #ddd;
+  font-size: 18px;
+  border-collapse: collapse;
 }
 
 .tagsinput,.tagsinput *{box-sizing:border-box}
