--- a/static/styles/add-recipe.css
+++ b/static/styles/add-recipe.css
@@ -53,7 +53,8 @@
 }
 #ingredient-tag {
   width:80%;
-  height: 200px;
+  height: auto;
+  padding-bottom: 60px;
 }
 #instructions {
   width:80%;
@@ -68,6 +69,12 @@
   font-size: 18px;
   border-collapse: collapse;
 }
+.drpdwn {
+  background-color: #5CDB95;
+  border: 1px solid #05386B;
+  width: 300px;
+}
+
 
 .tagsinput,.tagsinput *{box-sizing:border-box}
 .tagsinput{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap;background:#fff;font-family:sans-serif;font-size:14px;line-height:20px;color:#556270;padding:5px 5px 0;border:1px solid #e6e6e6;border-radius:2px}
