Add recipe post request handler implemented

--- a/static/styles/add-recipe.css
+++ b/static/styles/add-recipe.css
@@ -74,6 +74,9 @@
   border: 1px solid #05386B;
   width: 300px;
 }
+.dropdown-item {
+  cursor: pointer;
+}
 
 
 .tagsinput,.tagsinput *{box-sizing:border-box}
